# C-GDY-SAC

./: .gitignore  CMakeLists.txt  Makefile  README.md  adsorbate_naming.docx  compile_commands.json  models.md
C2_pathways_ads/: C2H4.msi  CH3COOH.msi  COCHO.msi  COCHOH.msi  OCH2CH.msi  OCH2CH2.msi  OCH2CHOH.msi  OCH2CO.msi  OCH2COH.msi  OCH2C_cyc_OH.msi
C2_pathways_ads/acetic_acid_path/: CH3COOH.msi  OCH2C_cyc_OH.msi
C2_pathways_ads/ethanol_other_path/: CH2OHCH2O.msi  ethylene_glycol.msi
C2_pathways_ads/ethanol_path/: CH2CH2OH.msi  CH2CHO.msi  CH2CHOH.msi  CH3CH2OH.msi  Glycolaldehyde.msi  Glyoxal.msi  HOCCHO.msi  HOHCCHO.msi  acetaldehyde.msi
C2_pathways_ads/ethylene_path/: C2H4.msi  CHO.msi  COCHO.msi  COCHOH.msi  OCH2CH.msi  OCH2CH2.msi  OCH2CHOH.msi  OCH2CO.msi  OCH2COH.msi
include/my_maths/: base.h  common.h  geometry.h  maths.h  matrix.h  my_maths.h  quaternion.h  vector.h
src/: assemble.c  assemble.h  atom.c  atom.h  castep_database.c  castep_database.h  castep_output.c  castep_output.h  cell.c  cell.h  database.c  database.h  file.c  lattice.c  lattice.h  main.c  main.h  misc.c  misc.h  molecule.c  molecule.h  my_maths.c  my_maths.h  param.c  param.h  parse_mol.c  parser.c  parser.h  tasks.c  tasks.h  testMath.c
src/database/: ads_database.c  ads_database.h  ads_table.yaml  database.c  database.h  lattice_database.c  lattice_database.h
src/maths/: MyMaths.c  MyMaths.h
src/msiParser/: CMakeLists.txt  Makefile  cmake_install.cmake  mod_msi.c  msiParser.h  parse_base.c  parse_mol.c  parse_msi.c
src/msiWriter/: msiWriter.c  msiWriter.h
src_backup/: atom.c  cell.h  lattice.h  main.c  misc.c  misc.h  my_maths_blas.c  parser.c  tasks.h
src_backup/maths/: MyMaths.c
src_backup/msiParser/: mod_msi.c  msiParser.h  parse_mol.c  parse_msi.c
src_backup/msiWriter/: msiWriter.h
