if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)
cmake_minimum_required(VERSION 3.20)
project (C-GDY-SAC)


#add_library(my_maths src/my_maths.c)
#target_link_libraries(my_maths -L/opt/homebrew/lib -lMatrix -lm)
#add_library(datastruct src/atom.c src/molecule.c src/lattice.c src/misc.c)
#target_link_libraries(datastruct -L/opt/homebrew/lib -lMatrix -lm)
#add_library(parser src/parser.c)
#target_link_libraries(parser -L/opt/homebrew/lib -lpcre2-8)
#add_library(assemble src/assemble.c)
#target_link_libraries (assemble -L/opt/homebrew/lib -lMatrix -lm)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
add_library (msi_modeling src/atom.c src/molecule.c src/lattice.c src/misc.c src/my_maths.c src/assemble.c src/parser.c)
target_link_libraries(msi_modeling -L/opt/homebrew/lib -lpcre2-8 -lMatrix -lm)
add_library (castepSeedGen src/cell.c src/castep_database.c)
target_link_libraries(castepSeedGen msi_modeling)
add_library(task_control src/tasks.c)
target_link_libraries(task_control castepSeedGen msi_modeling -fopenmp)
add_executable(test.o src/main.c)
target_link_libraries(test.o msi_modeling castepSeedGen task_control)
set (CMAKE_C_FLAGS "-Wall -I/opt/homebrew/include -L/opt/homebrew/lib -fopenmp -g")
